@@ -113,6 +113,7 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -155,7 +156,6 @@ public class CommonUtil {
     public static final String BALLERINA_CMD;
 
     public static final String URI_SCHEME_BALA = "bala";
-    public static final String URI_SCHEME_EXPR = "expr";
     public static final String URI_SCHEME_FILE = "file";
     public static final String LANGUAGE_ID_BALLERINA = "ballerina";
 
@@ -164,8 +164,6 @@ public class CommonUtil {
     public static final String BALLERINA_ORG_NAME = "ballerina";
 
     public static final String SDK_VERSION = System.getProperty("ballerina.version");
-
-    public static final String EXPR_SCHEME = "expr";
 
     public static final List<String> PRE_DECLARED_LANG_LIBS = Arrays.asList("lang.boolean", "lang.decimal",
             "lang.error", "lang.float", "lang.future", "lang.int", "lang.map", "lang.object", "lang.stream",
@@ -399,7 +397,7 @@ public class CommonUtil {
             default:
                 return getDefaultValueForTypeDescKind(typeKind);
         }
-
+        
         return Optional.of(typeString);
     }
 
@@ -1087,23 +1085,38 @@ public class CommonUtil {
     }
 
     /**
-     * Get the path from given string URI. Even if the given URI's scheme is expr, we convert it to file scheme and
-     * provide a valid Path
+     * Node comparator to compare the nodes by position.
+     */
+    public static class BLangNodeComparator implements Comparator<BLangNode> {
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public int compare(BLangNode node1, BLangNode node2) {
+            // TODO: Fix?
+            Location node1Loc = node1.getPosition();
+            Location node2Loc = node2.getPosition();
+            if (node1Loc == null || node2Loc == null) {
+                return -1;
+            }
+            return node1Loc.lineRange().startLine().line() - node2Loc.lineRange().startLine().line();
+        }
+    }
+
+    /**
+     * Get the path from given string URI.
      *
      * @param uri file uri
      * @return {@link Optional} Path from the URI
      */
     public static Optional<Path> getPathFromURI(String uri) {
-        URI fileUri = URI.create(uri);
-        if (fileUri.getScheme().equals(EXPR_SCHEME)) {
-            String newUri = fileUri.toString().replace(EXPR_SCHEME + ":", "file:");
-            try {
-                return Optional.of(Paths.get(new URL(newUri).toURI()));
-            } catch (URISyntaxException | MalformedURLException e) {
-                return Optional.empty();
-            }
+        try {
+            return Optional.of(Paths.get(new URL(uri).toURI()));
+        } catch (URISyntaxException | MalformedURLException e) {
+            // ignore
         }
-        return Optional.of(Paths.get(fileUri));
+        return Optional.empty();
     }
 
     /**
